<resources>
    <string name="check_permissions_failed">Requires permissions to access audio files</string>
    <string name="check_file_exist_error">The audio file has been renamed or moved.</string>
    <string name="need_full_version_for_setlists_error">More setlists available at MusHelp Pro</string>
    <string name="need_full_version_for_addsong_error">More track positions available in MusHelp Pro</string>
    <string name="rate_change_message">Speed:\u0020</string>
    <string name="rate_change_feature_error">Speed change is available only for Android 6.0 and higher.</string>
    <string name="rate_change_feature_error_off">Changes the speed of audio playback. A long press will return to normal speed.</string>
    <string name="add_audio_file_ok">Add audio:\u0020</string>
    <string name="add_audio_file">Select audio file</string>
    <string name="add_audio_file_wrong_format">Invalid file format:\u0020</string>
    <string name="alert_window_positive_button">To accept</string>
    <string name="alert_window_negative_button">Cancel</string>
    <string name="alert_window_message">This application requires permission to access the repository (audio files)</string>
    <string name="delete_audio_file_path">The path to the audio file is deleted.</string>
    <string name="notification_title">MusHelp works…</string>
    <string name="notification_desc">Click for an emergency stop.</string>
    <string name="popDel_text1">Do you really want to delete this track?</string>
    <string name="button_Cancel">Cancel</string>
    <string name="button_Delete">Delete</string>
    <string name="button_Save">Save</string>
    <string name="popupWEdit_set_text1">Set list position:</string>
    <string name="popupWEdit_text2">Title:</string>
    <string name="popupWEditSetList_HintText2"><u>Enter the name of the list</u></string>
    <string name="enter_track_position">Track position:</string>
    <string name="edit_enter_track_name"><u>Enter track name</u></string>
    <string name="text_metronom">Metro:</string>
    <string name="text_audio_or_metronom">Audio\ninstead of metronome</string>
    <string name="edit_hint_Enter_song_lyics"><u>Place here the lyrics</u>\nA single click on the basket will remove the lyrics, and a long hold on it will remove the linked link to the audio file.</string>
    <string name="Yes">Yes</string>
    <string name="Countdown">Countdown:</string>
    <string name="buy_popup_text">Would you like to purchase the full version of the application?\nYou will be available:\n- More set lists and as many tracks as you like in each\n- No ads</string>
    <string name="buy_popup_text_pro">Thank you for purchasing the full version of the program!</string>
    <string name="buy_popup_button_donate">To donate</string>
    <string name="buy_popup_rate_app">Rate this app:</string>
    <string name="Buy">Buy</string>
    <string name="SetListNameDefault">Set list\u0020</string>
    <string name="SetListHasEdit">Set list edited</string>
    <string name="SongHasEdit">Track edited</string>
    <string name="SongHasAdded">Track added</string>
    <string name="thankss">Thank!</string>
    <string name="reply_rate1">My app rating:\u0020</string>
    <string name="reply_subject">Feedback on the application MusHelp</string>
    <string name="reply_chooser">Select email client…</string>
    <string name="start_intent_play_google_error">Could not open Android Market, please check if Market app is installed or not. Try later</string>
    <string name="no_email_aggregator_error">No installed email client was found to send feedback.</string>
    <string name="SetListAndSongNoPositionError">Enter the position number to continue.</string>
    <string name="SetListNoNameError">Enter the name of the set list to continue.</string>
    <string name="SongNoNameError">Enter track name to continue</string>
    <string name="SongNoMetronomError">Enter value for metronome to continue</string>
    <string name="SetListPosNumError">Enter a position from 1 to\u0020</string>
    <string name="SetListPosNumErrorExtend">.\u0020 More setlists available in MusHelp Pro</string>
    <string name="SongPosNumError">Enter a position from 1 to\u0020</string>
    <string name="SongMetronomNumError">Enter a value from 1 to 300</string>
    <string name="EmptyLyrics">Lyrics can be inserted in the editor.</string>
    <string name="EmptySongName">Song title</string>
    <string name="Hint10">Long press to edit the item.</string>
    <string name="already_own_premium_version">You already have a full premium version of the program.</string>
    <string name="NewItemButtonBottomText">add</string>
    <string name="SpeedRateButtonBottomText">speed</string>
    <string name="countDownButtonBottomText">countdown</string>
    <string name="metroSoundButtonBottomText">sound meter</string>
    <string name="fontButtonBottomText">change background</string>
    <string name="fontButtonBottomText2">version</string>
    <string name="metroSoundButtonBottomTextSmall">sound m.</string>
    <string name="SpeedRateButtonBottomTextSmall">speed</string>
    <string name="reply_rate2">\nAnd also my review:\n</string>
    <string name="_170" translatable="false">170</string>
    <string name="_12" translatable="false">12</string>
    <string name="author_superbigbang" translatable="false">Author: SuperBigBang</string>
    <string name="_100" translatable="false"><u>100</u></string>
    <string name="popupWEditSetListHintText1" translatable="false"><u>10</u></string>
    <string name="playpausebutton" translatable="false">playPauseButton</string>
    <string name="deletesongbutton" translatable="false">deleteSongButton</string>
    <string name="title_vibrate" translatable="false">Vibrate</string>
    <string name="app_name" translatable="false">MusHelp</string>
    <string name="logoimg" translatable="false">logoimg</string>
    <string name="authorimg" translatable="false">authorimg</string>
    <string name="buybutton" translatable="false">buyButton</string>
    <string name="metroSoundChangeButton" translatable="false">metroSoundChangeButton</string>
    <string name="newitemcirclebutton" translatable="false">newItemCircleButton</string>
    <string name="volumex2button" translatable="false">volumeX2button</string>
    <string name="divider" translatable="false">divider</string>
    <string name="bpm" translatable="false">bpm</string>
    <string name="title_beep" translatable="false">Beep</string>
    <string name="title_wood" translatable="false">Click</string>
    <string name="title_ding" translatable="false">Ding</string>
    <string name="theme_change_button" translatable="false">Theme change button</string>
    <string name="rate_change_button" translatable="false">Rate change button</string>
    <string name="save_set_list_button">save set-list button</string>
    <string name="load_set_list_button">load set-list button</string>
    <string name="nothing_to_save_error">Nothing to save</string>
    <string name="saving_tracks_was_successful_in">Saving tracks was successful in:</string>
    <string name="saving_failed">Saving failed</string>
    <string name="loading_filed">Loading failed</string>
    <string name="set_list_must_be_empty">Set list must be empty</string>
    <string name="loading_tracks_was_successful">loading tracks was successful</string>
</resources>