<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/round_shape_btn_set_lists"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/buy_popup_text"
            android:textAllCaps="false"
            android:textColor="?lines_color"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/author_superbigbang"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:srcCompat="@drawable/author" />


        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <Button
                android:id="@+id/btn_PBUY_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="0.75"
                android:background="@drawable/round_shape_btn_set_lists"
                android:text="@string/button_Cancel"
                android:textColor="?lines_color"
                android:textSize="14sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_PBUY_Accept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_weight="0.75"
                android:background="@drawable/round_shape_btn_set_lists"
                android:text="@string/Buy"
                android:textColor="?BuyOkButton"
                android:textSize="14sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>