<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/round_shape_btn_set_lists"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/popDel_text1"
            android:textAllCaps="false"
            android:textColor="@color/cornerColor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/popupDelWindSongName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text=""
            android:textColor="?OtherTextColor"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="25dp"
                android:layout_weight="0.75"
                android:background="@drawable/round_shape_btn_set_lists"
                android:text="@string/button_Cancel"
                android:textColor="@color/cornerColor"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_Compelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_weight="0.75"
                android:background="@drawable/round_shape_btn_set_lists"
                android:text="@string/button_Delete"
                android:textColor="@color/cornerColor"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>