<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_shape_btn_set_lists"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/newItemCircleButton2"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/newitemcirclebutton"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editMetronomBPM"
            app:srcCompat="@drawable/baseline_add_circle_outline_white_48" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/roboto_medium"
            android:text="Позиция трэка:"
            android:textColor="@color/cornerColor"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editSongPosition"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/popupWEdit_text2"
            android:textColor="@color/cornerColor"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editSongName"
            app:layout_constraintStart_toStartOf="@+id/textView" />

        <EditText
            android:id="@+id/editSongPosition"
            android:layout_width="144dp"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:fontFamily="@font/roboto_medium"
            android:gravity="start"
            android:hint="@string/popupWEditSetListHintText1"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editSongName"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:ems="10"
            android:fontFamily="@font/roboto_medium"
            android:hint="Введите название трэка"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/editSongPosition"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:fontFamily="@font/roboto_medium"
            android:text="Метроном:"
            android:textColor="@color/cornerColor"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editMetronomBPM"
            app:layout_constraintStart_toStartOf="@+id/textView" />

        <EditText
            android:id="@+id/editMetronomBPM"
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:ellipsize="end"
            android:ems="10"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/popupWEditSetListHintText1"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/editSongName"
            app:layout_constraintTop_toBottomOf="@+id/editSongName"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="Аудио вместо метронома:"
            android:textColor="@color/cornerColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/newItemCircleButton2"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/newItemCircleButton2" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btn_e_cancel"
                style="buttonBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="25dp"
                android:layout_weight="0.75"
                android:background="@drawable/round_shape_btn_set_lists"
                android:text="@string/button_Cancel"
                android:textColor="@color/cornerColor" />

            <Button
                android:id="@+id/btn_e_Save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_weight="0.75"
                android:background="@drawable/round_shape_btn_set_lists"
                android:text="@string/button_Save"
                android:textColor="@color/cornerColor"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bpm"
            android:textAlignment="viewStart"
            android:textColor="@color/cornerColor"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editMetronomBPM"
            app:layout_constraintStart_toEndOf="@+id/editMetronomBPM" />

        <CheckBox
            android:id="@+id/alternateSoundcheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:buttonTint=""
            app:layout_constraintBottom_toBottomOf="@+id/newItemCircleButton2"
            app:layout_constraintEnd_toStartOf="@+id/newItemCircleButton2"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/newItemCircleButton2" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>